-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7.1
-
None
-
-
08f6a9a52 (dev), 4b1b46ee7 (6.7)
We are using the configuration option `-no-feature-mdiarea` and since Qt 6.7.1 we are no longer able to build Qt on Windows (GNU + MSVC). It was probably caused by https://codereview.qt-project.org/c/qt/qtbase/+/555999.
Output from GNU:
09:42:22 FAILED: qtbase/src/plugins/styles/modernwindows/CMakeFiles/QModernWindowsStylePlugin.dir/qwindows11style.cpp.obj 09:42:22 C:\bin\ccache.exe C:\mingw32\x86_64-12.1.0-release-posix-seh-rt_v10-rev0\bin\c++.exe -DMINGW_HAS_SECURE_API=1 -DNOMINMAX -DQModernWindowsStylePlugin_EXPORTS -DQT_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_UP_TO=0x040800 -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_GUI_LIB -DQT_LEAN_HEADERS=1 -DQT_NO_AS_CONST -DQT_NO_DEBUG -DQT_NO_EXCEPTIONS -DQT_NO_FOREACH -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QEXCHANGE -DQT_PLUGIN -DQT_USE_QSTRINGBUILDER -DQT_WARN_DEPRECATED_UP_TO=0x070000 -DQT_WIDGETS_LIB -DUNICODE -DWIN32 -DWIN64 -D_ENABLE_EXTENDED_ALIGNED_STORAGE -D_UNICODE -D_WIN64 -IR:/J/workspace/default_RLW64G/build/b/src/qt-build/qtbase/src/plugins/styles/modernwindows/QModernWindowsStylePlugin_autogen/include -IR:/J/workspace/default_RLW64G/build/b/src/qt/qtbase/src/plugins/styles/modernwindows -IR:/J/workspace/default_RLW64G/build/b/src/qt-build/qtbase/src/plugins/styles/modernwindows -IR:/J/workspace/default_RLW64G/build/b/src/qt-build/qtbase/include -IR:/J/workspace/default_RLW64G/build/b/src/qt-build/qtbase/include/QtCore -IR:/J/workspace/default_RLW64G/build/b/src/qt/qtbase/mkspecs/win32-g++ -IR:/J/workspace/default_RLW64G/build/b/src/qt-build/qtbase/include/QtGui -IR:/J/workspace/default_RLW64G/build/b/src/qt-build/qtbase/src/gui -IR:/J/workspace/default_RLW64G/build/b/src/qt-build/qtbase/include/QtGui/6.7.1 -IR:/J/workspace/default_RLW64G/build/b/src/qt-build/qtbase/include/QtGui/6.7.1/QtGui -IR:/J/workspace/default_RLW64G/build/b/src/qt-build/qtbase/src/corelib -IR:/J/workspace/default_RLW64G/build/b/src/qt-build/qtbase/include/QtCore/6.7.1 -IR:/J/workspace/default_RLW64G/build/b/src/qt-build/qtbase/include/QtCore/6.7.1/QtCore -IR:/J/workspace/default_RLW64G/build/b/src/qt-build/qtbase/src/widgets -IR:/J/workspace/default_RLW64G/build/b/src/qt-build/qtbase/include/QtWidgets/6.7.1 -IR:/J/workspace/default_RLW64G/build/b/src/qt-build/qtbase/include/QtWidgets/6.7.1/QtWidgets -IR:/J/workspace/default_RLW64G/build/b/src/qt-build/qtbase/include/QtWidgets -IR:/J/workspace/default_RLW64G/build/dist/include -DNDEBUG -O2 -std=c++17 -fvisibility=hidden -fno-keep-inline-dllexport -Wall -Wextra -fno-exceptions -Wa,-mbig-obj -Wsuggest-override -MD -MT qtbase/src/plugins/styles/modernwindows/CMakeFiles/QModernWindowsStylePlugin.dir/qwindows11style.cpp.obj -MF qtbase\src\plugins\styles\modernwindows\CMakeFiles\QModernWindowsStylePlugin.dir\qwindows11style.cpp.obj.d -o qtbase/src/plugins/styles/modernwindows/CMakeFiles/QModernWindowsStylePlugin.dir/qwindows11style.cpp.obj -c R:/J/workspace/default_RLW64G/build/b/src/qt/qtbase/src/plugins/styles/modernwindows/qwindows11style.cpp 09:42:22 R:/J/workspace/default_RLW64G/build/b/src/qt/qtbase/src/plugins/styles/modernwindows/qwindows11style.cpp:17:10: fatal error: QtWidgets/qmdiarea.h: No such file or directory 09:42:22 17 | #include <QtWidgets/qmdiarea.h> 09:42:22 | ^~~~~~~~~~~~~~~~~~~~~~ 09:42:22 compilation terminated.