Fix build with  -no-feature-mdiarea

Amends 96fcb4ef84bb7486221f04e53be8ee7218385178.

Fixes: QTBUG-125506
Pick-to: 6.7
Change-Id: I8d7b4396623f4420f6901c44146a0cfd2cda4e5c
Reviewed-by: Doris Verria <doris.verria@qt.io>
Reviewed-by: Lars Schmertmann <lars.schmertmann@governikus.de>
Reviewed-by: Wladimir Leuschner <wladimir.leuschner@qt.io>