src/plugins/styles/modernwindows/qwindows11style.cpp
@@ -14,7 +14,9 @@
 #include <QtWidgets/qgraphicsview.h>
 #include <QtWidgets/qlistview.h>
 #include <QtWidgets/qmenu.h>
+#if QT_CONFIG(mdiarea)
 #include <QtWidgets/qmdiarea.h>
+#endif
 #include <QtWidgets/qtextedit.h>
 #include <QtWidgets/qtreeview.h>
 
@@ -2047,7 +2049,11 @@ void QWindows11Style::polish(QWidget* widget)
         pal.setColor(QPalette::Base, pal.window().color());
         widget->setPalette(pal);
     } else if (const auto *scrollarea = qobject_cast<QAbstractScrollArea *>(widget);
-               scrollarea && !qobject_cast<QMdiArea *>(widget)) {
+               scrollarea
+#if QT_CONFIG(mdiarea)
+               && !qobject_cast<QMdiArea *>(widget)
+#endif
+        ) {
         QPalette pal = scrollarea->viewport()->palette();
         const QPalette originalPalette = pal;
         pal.setColor(scrollarea->viewport()->backgroundRole(), Qt::transparent);
@@ -2066,7 +2072,11 @@ void QWindows11Style::unpolish(QWidget *widget)
 {
     QWindowsVistaStyle::unpolish(widget);
     if (const auto *scrollarea = qobject_cast<QAbstractScrollArea *>(widget);
-        scrollarea && !qobject_cast<QMdiArea *>(widget)) {
+        scrollarea
+#if QT_CONFIG(mdiarea)
+        && !qobject_cast<QMdiArea *>(widget)
+#endif
+        ) {
         const QPalette pal = scrollarea->viewport()->property("_q_original_background_palette").value<QPalette>();
         scrollarea->viewport()->setPalette(pal);
         scrollarea->viewport()->setProperty("_q_original_background_palette", QVariant());
